wk_taa_taaqa/src/objects/Activity_Goals__c.object
<CustomObject>
    <fields>
        <fullName>Created_By_ID__c</fullName>
        <formula>CreatedBy.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <formula>Text( Owner:User.Division__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_Contacts__c</fullName>
        <label>Goal: Contacts</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Goal_Created__c</fullName>
        <label>Goal: $ Created</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Goal_Dials__c</fullName>
        <label>Goal: Dials</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Goal_Opps_Created__c</fullName>
        <label>Goal: # Opps Created</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>High_Level_Division__c</fullName>
        <formula>Text( Owner:User.High_Level_Division__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>High Level Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <formula>Text( Owner:User.Segment__c )</formula>
        <label>Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Activity_Goals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Weekly_Goal_Contacts__c</fullName>
        <formula>Goal_Contacts__c /4</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weekly Goal: Contacts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weekly_Goal_Created__c</fullName>
        <formula>Goal_Created__c  /4</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weekly Goal: $ Created</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weekly_Goal_Dials__c</fullName>
        <formula>Goal_Dials__c /4</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weekly Goal: Dials</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weekly_Goal_Opps_Created__c</fullName>
        <formula>Goal_Opps_Created__c /4</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weekly Goal: # Opps Created</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Activity Goals</label>
    <listViews>
        <fullName>Activity_Goals</fullName>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>NAME</columns>
        <columns>Division__c</columns>
        <columns>High_Level_Division__c</columns>
        <columns>Goal_Created__c</columns>
        <columns>Goal_Opps_Created__c</columns>
        <columns>Goal_Contacts__c</columns>
        <columns>Goal_Dials__c</columns>
        <columns>Month__c</columns>
        <filterScope>Everything</filterScope>
        <label>Activity Goals</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Activity Goals Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Activity Goals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>